# chocolate_milk

./: .gitignore  Cargo.toml  LICENSE  README.md  SNAPSHOTTING.md  qemu_guest_dump_to_falkdump.py
.github/workflows/: build.yml
bootloader/: Cargo.toml
bootloader/.cargo/: config
bootloader/src/: asm_routines.asm  core_reqs.rs  intrins.rs  main.rs  mm.rs  panic.rs  print.rs  pxe.rs  realmode.rs  stage0.asm
diagrams/: network_stack.drawio  scratchoff_coverage.drawio
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/src/: acpi.rs  apic.rs  core_locals.rs  dhcp.rs  e1000.rs  ept.rs  fuzz_session.rs  interrupts.rs  intrinsics.rs  main.rs  minidump.rs  mm.rs  net.rs  paging.rs  panic.rs  pci.rs  print.rs  snapshotted_app.rs  test_fuzzer.rs  time.rs  vmx.rs  vtx.rs  winboot.rs
kernel/src/fuzz_session/: windows.rs
kernel/src/net/: arp.rs  dhcp.rs  intel_nic.rs  netmapping.rs  tcp.rs  udp.rs
sausage_factory/: Makefile  Makefile.win  shellcode.asm  target.c  test.c
server/: .gitignore  Cargo.toml  coverage_of.py
server/src/: main.rs
shared/aht/: Cargo.toml
shared/aht/src/: lib.rs
shared/atomicvec/: Cargo.toml
shared/atomicvec/src/: lib.rs
shared/boot_args/: Cargo.toml
shared/boot_args/src/: lib.rs
shared/core_reqs/: Cargo.toml
shared/core_reqs/src/: lib.rs
shared/cpu/: Cargo.toml
shared/cpu/src/: lib.rs
shared/falkhash/: Cargo.toml
shared/falkhash/src/: lib.rs
shared/falktp/: Cargo.toml
shared/falktp/src/: lib.rs
shared/lockcell/: Cargo.toml
shared/lockcell/src/: lib.rs
shared/mmap_helpers/: Cargo.toml
shared/mmap_helpers/src/: lib.rs
shared/noodle/: Cargo.toml  serialize_tuple_gen.py  tuple_match_gen.py
shared/noodle/src/: lib.rs  tuple_gen.rs  tuple_match.rs
shared/page_table/: Cargo.toml
shared/page_table/src/: lib.rs
shared/pe_parser/: Cargo.toml
shared/pe_parser/src/: lib.rs
shared/rangeset/: Cargo.toml
shared/rangeset/src/: lib.rs
shared/serial/: Cargo.toml
shared/serial/src/: lib.rs
src/: main.rs
