[package]
name = "bootloader"
version = "0.1.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
debug = true

[profile.dev]
panic = "abort"
debug = true

