[package]
name = "kernel"
version = "0.1.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_reqs = { path = "../shared/core_reqs" }
cpu = { path = "../shared/cpu" }
serial = { path = "../shared/serial" }

[profile.release]
panic = "abort"
opt-level = 2
debug = true

[profile.dev]
panic = "abort"
debug = true

