[package]
name = "boot_args"
version = "0.1.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lockcell = { path = "../lockcell" }
rangeset = { path = "../rangeset" }
serial = { path = "../serial" }
page_table = { path = "../page_table" }

